<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/item_delete_records"
        style="@style/style_of_item_delete_records"
        android:text="@string/delete_records"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/style_of_item_print_records"
        android:id="@+id/item_print_repord"
        android:text="@string/print_report"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/style_of_email_report_as_pdf"
        android:id="@+id/item_email_report_as_pdf"
        android:text="@string/email_report_as_pdf"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/style_of_email_search_data_as_csv"
        android:id="@+id/item_emailt_search_data_as_csv"
        android:text="@string/email_search_data_as_csv"
        />
</LinearLayout>