<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/item_delete_records"
        style="@style/style_of_item_delete_records"
        android:text="@string/delete_records"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/style_of_item_print_records"
        android:id="@+id/item_print_repord"
        android:text="@string/print_report"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/style_of_email_report_as_pdf"
        android:id="@+id/item_email_report_as_pdf"
        android:text="@string/email_report_as_pdf"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/style_of_email_search_data_as_csv"
        android:id="@+id/item_emailt_search_data_as_csv"
        android:text="@string/email_search_data_as_csv"
        />
    <ScrollView
        android:id="@+id/scroller"
        android:layout_marginTop="64dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/popup_two"
        android:fadingEdgeLength="0dip"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/tracks"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

        </LinearLayout>
    </ScrollView >


    <ImageView
        android:id="@+id/arrow_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-2dp"
        android:src="@drawable/up_arrow" />

    <ImageView
        android:id="@+id/arrow_down_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/scroller"
        android:layout_marginTop="-4dip"
        android:src="@drawable/arrow_down" />

    <View android:id="@+id/color_bar23"
        android:background="#0000FF"
        android:layout_marginTop="10sp"
        android:layout_width = "70sp"
        android:layout_toStartOf="@+id/iv_icon"
        android:layout_toLeftOf="@+id/iv_icon"
        android:layout_height="30dip"
        android:paddingBottom="6dip"
        android:layout_marginStart="170sp"
        android:layout_marginLeft="170sp"
        android:layout_centerVertical ="true"
        android:layout_alignParentTop="true"/>
    <View android:id="@+id/left_color_bar"
        android:background="#0000FF"
        android:layout_marginTop="10sp"
        android:layout_width = "70sp"
        android:layout_height="30dip"
        android:paddingBottom="6dip"
        android:layout_marginLeft="20dp"
        android:layout_centerVertical ="true"
        android:layout_alignParentTop="true"/>

</RelativeLayout>